--- a/MvcCoreAjax/Views/Shared/_Layout.cshtml
+++ b/MvcCoreAjax/Views/Shared/_Layout.cshtml
@@ -34,10 +34,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                      
-                       <li class="nav-item">
-                           <a class="nav-link text-white" asp-controller="Categories" asp-action="Index">Categorias</a>
-                       </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-controller="Categories" asp-action="Index">Categorias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" >Profesores</a>
+                        </li>
                     </ul>
                 </div>
             </div>
